--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ footer {
 } 
 
 .modal-btn-x:hover, .modal-btn-x:focus {
-    background-color: #404bbf;
+    background-color: #404bbf;  
 }
 
 .modal-x-svg {
@@ -547,9 +547,12 @@ footer {
 }
 
 .modal-form {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 
+.modal-wrap-label {
+    margin-bottom: 8px;
+}
 
 .modal-label {
     font-weight: 400;
@@ -561,7 +564,6 @@ footer {
 }
 
 .modal-wrap-input {
-    margin-bottom: 8px;
     position: relative;
 }
 
@@ -592,6 +594,10 @@ footer {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-comment-wrap {
+    margin-bottom: 16px;
+}
+
 .modal-comment {
     width: 100%;
     height: 120px;
@@ -599,7 +605,9 @@ footer {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     background-color: transparent;
+    outline: transparent;
     resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-comment::placeholder{
@@ -610,6 +618,54 @@ footer {
     color: rgba(46, 47, 66, 0.4);
 }
 
+.modal-comment:focus {
+    border-color: #4d5ae5;
+}
+
+.modal-check-wrap {
+}
+.modal-check {
+}
+
+.label-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.label-text span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked + .label-text span {
+    fill: #f4f4fd;
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-check-svg {
+    
+}
+.policy-link {
+    font-family: inherit;
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
 
 .modal-btn-send {
     min-width: 169px;
