--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,10 @@ footer {
     max-width: 264px;
 }
 
+.footer-socials {
+    margin-right: 80px;
+}
+
 .footer-socials-heading {
     font-weight: 500;
     font-size: 16px;
@@ -488,42 +492,127 @@ footer {
     fill: #f4f4fd;
 }
 
+.footer-subscribe {
+}
+.footer-subscribe-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+.footer-interactiv {
+    display: flex;
+    gap: 24px;
+}
+.footer-form {
+    
+}
+.footer-email {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    background-color: transparent;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding-left: 24px;
+    padding-right: 24px;
+    color: #fff;
+}
+
+.footer-email::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.footer-btn {
+    font-family: inherit;
+    min-width: 165px;
+    height: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    border-radius: 4px;
+    background-color: #4d5ae5;
+    border: none;
+    padding: 8px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover,
+.hfooter-btn:focus {
+    background-color: #404bbf;
+}
+
+.footer-btn-svg {
+    fill: #fff;
+}
+
 /* ------BACK----- */
 
 .backdrop {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.backdrop.is-open {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+}
+
 .modal {
     width: 408px;
     min-height: 584px;
+    position: absolute;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     border-radius: 4px;
-    padding: 24px;
-    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 72px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn-x {
     width: 24px;
     height: 24px;
-    border-radius: 100%;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    padding: 0;
+    border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color:  #e7e9fc;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .modal-btn-x:hover, .modal-btn-x:focus {
-    background-color: #404bbf;  
+    background-color: #404bbf;
+    border: none;  
 }
 
 .modal-x-svg {
@@ -588,6 +677,7 @@ footer {
 
 .modal-input-svg {
     position: absolute;
+    top: 8px;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
@@ -670,18 +760,21 @@ footer {
 .modal-btn-send {
     min-width: 169px;
     height: 56px;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    text-align: center;
     color: #fff;
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4d5ae5;
     cursor: pointer;
     border: none;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
