--- a/css/style.css
+++ b/css/style.css
@@ -502,12 +502,10 @@ footer {
     color: #fff;
     margin-bottom: 16px;
 }
-.footer-interactiv {
-    display: flex;
-    gap: 24px;
-}
+
 .footer-form {
-    
+    display: flex;
+    gap: 24px;  
 }
 .footer-email {
     width: 264px;
@@ -515,10 +513,14 @@ footer {
     border: 1px solid #fff;
     border-radius: 4px;
     background-color: transparent;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     padding-left: 24px;
     padding-right: 24px;
-    color: #fff;
 }
 
 .footer-email::placeholder {
@@ -530,7 +532,7 @@ footer {
 }
 
 .footer-btn {
-    font-family: inherit;
+    font-family: "Roboto", sans-serif;
     min-width: 165px;
     height: 40px;
     font-weight: 500;
@@ -588,9 +590,7 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 72px;
+    padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn-x {
@@ -603,6 +603,7 @@ footer {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color:  #e7e9fc;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -622,7 +623,7 @@ footer {
 
 .modal-btn-x:hover > .modal-x-svg, 
 .modal-btn-x:focus > .modal-x-svg {
-    fill: #f4f4fd;
+    fill: #ffffff;
 }
 
 .modal-title {
@@ -646,9 +647,10 @@ footer {
 .modal-label {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    display: block;
     margin-bottom: 4px;
 }
 
@@ -697,13 +699,18 @@ footer {
     background-color: transparent;
     outline: transparent;
     resize: none;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-comment::placeholder{
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
 }
@@ -713,6 +720,7 @@ footer {
 }
 
 .modal-check-wrap {
+    margin-bottom: 24px;
 }
 .modal-check {
 }
@@ -720,15 +728,15 @@ footer {
 .label-text {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    display: flex;
+    display: inline-flex;
     gap: 8px;
     align-items: center;
 }
 
-.label-text span {
+.label-text-checkbox {
     width: 16px;
     height: 16px;
     border-radius: 2px;
@@ -737,10 +745,10 @@ footer {
     justify-content: center;
     align-items: center;
     fill: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-check:checked + .label-text span {
+.modal-check:checked + .label-text > .label-text-checkbox {
     fill: #f4f4fd;
     background-color: #404bbf;
     border: none;
@@ -751,7 +759,7 @@ footer {
 }
 .policy-link {
     font-family: inherit;
-    line-height: 1.33333;
+    line-height: 1.33;
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #4d5ae5;
@@ -760,7 +768,7 @@ footer {
 .modal-btn-send {
     min-width: 169px;
     height: 56px;
-    font-family: inherit;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -771,9 +779,7 @@ footer {
     background-color: #4d5ae5;
     cursor: pointer;
     border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     padding: 0;
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
