--- a/css/style.css
+++ b/css/style.css
@@ -519,8 +519,8 @@ footer {
     letter-spacing: 0.04em;
     color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .footer-email::placeholder {
@@ -545,8 +545,9 @@ footer {
     border: none;
     padding: 8px 24px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -557,6 +558,7 @@ footer {
 
 .footer-btn-svg {
     fill: #fff;
+    margin-left: 16px;
 }
 
 /* ------BACK----- */
@@ -741,7 +743,7 @@ footer {
     height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     fill: transparent;
